# Vendi

./: .gitignore  pyproject.toml
frontend/: package-lock.json
frontend/src/: App.jsx
src/: index.html  script.js  styles.css
src/backend/: app.py  config.py  stepper_test.py  vendi_com.py
src/backend/audio/: asr.py  tts.py  tts_elevenlabs.py  tts_piper.py
src/backend/model/: generate.py  loader.py
src/backend/tools/: dispenser.py
src/firmware/: stepper_test.py
src/firmware/vendi_firmware/: vendi_firmware.ino
src/frontend/: index.html  package-lock.json  package.json
src/frontend/public/: pcm-worklet.js
src/frontend/src/: App.jsx  Live2DCharacter.jsx  useVoiceStream.js
src/model/: loader.py
